--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,11 @@ body {
   color: #343434;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+}
+
 li {
   list-style: none;
 }
@@ -12,6 +17,7 @@ p {
 }
 
 input {
+  width: -webkit-fill-available;
   border-radius: 6px;
   border: 1px solid #ccc;
   padding: 6px 16px;
@@ -21,13 +27,32 @@ button {
   border-radius: 6px;
   border: none;
   padding: 6px 16px;
-  margin: 0px 4px;
+  font-weight: bold;
+}
+
+button.btn-full {
+  width: 100%;
 }
 
 button:hover {
-  background-color: #79a8a9;
+  background-color: #a512b8;
   color: #fff;
   cursor: pointer;
+}
+
+.container {
+  width: 1280px;
+  margin: 0 auto;
+}
+
+.input-item {
+  width: 100%;
+  margin-bottom: 8px;
+}
+
+.input-disc {
+  font-size: 13px;
+  color: rgb(128, 128, 128);
 }
 
 .wine-list {
@@ -40,12 +65,13 @@ button:hover {
 }
 
 .wine-item {
+  word-break: break-all;
+  width: 224px;
   margin: 0 30px 40px 0;
-  width: calc(100% / 4);
 }
 
 .wine-image {
-  width: 240px;
+  width: 224px;
 }
 
 .wine-name {
@@ -59,4 +85,27 @@ button:hover {
 
 .wine-comment {
   margin-bottom: 8px;
+}
+
+/* モーダルウィンドウ */
+#overlay {
+  /*　画面全体を覆う設定　*/
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+
+  /*　画面の中央に要素を表示させる設定　*/
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#content {
+  z-index: 2;
+  width: 50%;
+  padding: 1em;
+  background: #fff;
 }
